# realtor-gpt

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
api/: Dockerfile  Makefile  ai-plugin.json  pyproject.toml
api/scripts/: embed.py
api/src/api/: clients.py  dependencies.py  main.py  settings.py  utils.py
api/src/api/datastore/: base.py  pinecone.py
api/src/api/geocode/: models.py  routes.py
api/src/api/listing/: models.py  routes.py  service.py
api/src/api/models/: api.py
api/src/api/services/: chunks.py  openai.py
db/: schema.sql
db/scripts/: backup  init  restore
